data/derived/comb/progs/unify/prog1553.ml.out
Characters 31-33:
  let f a x = (a^2.)::x  in
                 ^^
Error: This expression has type float but an expression was expected of type
         string
